chore: fix gap space for vertical

--- a/packages/core/src/components/bal-tabs/bal-tabs.sass
+++ b/packages/core/src/components/bal-tabs/bal-tabs.sass
@@ -18,10 +18,11 @@
   //
   // Vertical layout
   &--vertical
-    gap: var(--bal-space-normal)
     flex-direction: column
+    gap: var(--bal-space-x-large)
     +tablet
       flex-direction: row
+      gap: var(--bal-space-normal)
   //
   // Navbar layout
   &--navbar
